@@ -10,7 +10,6 @@
 		supports any combination of git, svn, mercurial, bzr, darcs, cvs, vcsh,
 		fossil, and veracity repositories, and support for other version control
 		systems can easily be added. (There are extensions adding support for unison
-		can easily be added. (There are extensions adding support for unison
 		and git-svn.)
 
 		It is extremely configurable via simple shell scripting. Some examples
