@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/mr
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-vcs/cvs-repo/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.8 2012/02/18 15:49:20 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-vcs/cvs-repo/gentoo-x86/dev-vcs/mr/ChangeLog,v 1.9 2012/04/22 11:55:28 tove Exp $
+
+  22 Apr 2012; Torsten Veller <tove@gentoo.org> -mr-1.04.ebuild,
+  -mr-1.10.ebuild, metadata.xml:
+  Cleanup
 
 *mr-1.11 (18 Feb 2012)
 
